# vault_server

./: .env.example  .gitignore  LICENSE.md  PROJECT_STRUCTURE.md  README.md  package-lock.json  package.json  server.js
desktop/: Cargo.toml  electron.js  tauri.conf.json
desktop/src/: main.rs
docs/: PROJECT_STATUS.md  VAULT_PHASES.md  VAULT_ROADMAP.md
public/: index.html  player.html  test.html  v2.html  working.html
public/src/: app.js
public/src/core/: state.js  storage.js
public/src/player/: playlist.js  youtubePlayer.js
public/themes/: amber.json  architectural_blueprint.json  arctic_aurora.json  art_deco_metropolis.json  bauhaus_primary.json  bioluminescent_lab.json  biomorphic_flow.json  brutalist_concrete.json  celestial_observatory.json  chromatic_spectrum.json  cosmic_nebula.json  cyber.json  cyberpunk_matrix.json  deep_ocean_abyss.json  desert_sandstorm.json  enchanted_forest.json  forest.json  glassmorphism_pro.json  gothic_cathedral.json  holographic_future.json  industrial_loft.json  kinetic_energy.json  lofi_study_room.json  material-dark.json  material-light.json  memphis_milano.json  midnight.json  minimalist_shadow.json  mono.json  monochrome_ink.json  moroccan_nights.json  noir_detective.json  ocean.json  pastel_dream.json  persian_tapestry.json  quantum_void.json  retrowave_terminal.json  rose.json  scandinavian_frost.json  steampunk_brass.json  (+11 more)
release/: RELEASE_NOTES.md
scripts/: COMMANDS.md  install.sh  launch_vault.bat  launch_vault.command  launch_vault.py  prepare-release.sh  run-vault.sh  start_vault.sh  test_all.sh
(+8 files in other folders)
